--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "general-router",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "一个通用的路由基础模块",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "babel src --out-dir lib",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,17 @@
   "homepage": "https://github.com/Houfeng/general-router#readme",
   "dependencies": {
     "ntils": "^2.0.15"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-runtime": "^6.20.0"
   }
 }
